documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.VB


    Public Declare Function L43_BCDGetData Lib "L43W32.DLL" Alias "_L43_BCDGetData@12" (ByVal msg As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
    Public Declare Function L43_BCDGetMant Lib "L43W32.DLL" Alias "_L43_BCDGetMant@8" (ByVal msg As UInt32, ByVal sigdig As UInt16) As UInt32
    Public Declare Function L43_BCDGetSign Lib "L43W32.DLL" Alias "_L43_BCDGetSign@4" (ByVal msg As UInt32) As UInt16
    Public Declare Function L43_BCDGetSSM Lib "L43W32.DLL" Alias "_L43_BCDGetSSM@4" (ByVal msg As UInt32) As UInt16
    Public Declare Sub L43_BCDGetVal Lib "L43W32.DLL" Alias "_L43_BCDGetVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigdig As UInt16, ByRef resolstr As String)
    Public Declare Function L43_BCDPutData Lib "L43W32.DLL" Alias "_L43_BCDPutData@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
    Public Declare Function L43_BCDPutMant Lib "L43W32.DLL" Alias "_L43_BCDPutMant@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal sigdig As UInt16, ByVal sign As UInt16) As UInt32
    Public Declare Function L43_BCDPutSign Lib "L43W32.DLL" Alias "_L43_BCDPutSign@8" (ByVal msg As UInt32, ByVal sign As UInt16) As UInt32
    Public Declare Function L43_BCDPutSSM Lib "L43W32.DLL" Alias "_L43_BCDPutSSM@8" (ByVal msg As UInt32, ByVal value As UInt16) As UInt32
    Public Declare Function L43_BCDPutVal Lib "L43W32.DLL" Alias "_L43_BCDPutVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigdig As UInt16, ByRef resolstr As String) As UInt32
    Public Declare Function L43_BNRGetData Lib "L43W32.DLL" Alias "_L43_BNRGetData@12" (ByVal msg As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
    Public Declare Function L43_BNRGetMant Lib "L43W32.DLL" Alias "_L43_BNRGetMant@8" (ByVal msg As UInt32, ByVal sigbit As UInt16) As UInt32
    Public Declare Function L43_BNRGetSign Lib "L43W32.DLL" Alias "_L43_BNRGetSign@4" (ByVal msg As UInt32) As UInt16
    Public Declare Function L43_BNRGetSSM Lib "L43W32.DLL" Alias "_L43_BNRGetSSM@4" (ByVal msg As UInt32) As UInt16
    Public Declare Sub L43_BNRGetVal Lib "L43W32.DLL" Alias "_L43_BNRGetVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigbit As UInt16, ByRef resolstr As String)
    Public Declare Function L43_BNRPutData Lib "L43W32.DLL" Alias "_L43_BNRPutData@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
    Public Declare Function L43_BNRPutMant Lib "L43W32.DLL" Alias "_L43_BNRPutMant@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal sigbit As UInt16, ByVal twos As UInt16) As UInt32
    Public Declare Function L43_BNRPutSign Lib "L43W32.DLL" Alias "_L43_BNRPutSign@8" (ByVal msg As UInt32, ByVal twos As UInt16) As UInt32
    Public Declare Function L43_BNRPutSSM Lib "L43W32.DLL" Alias "_L43_BNRPutSSM@8" (ByVal msg As UInt32, ByVal value As UInt16) As UInt32
    Public Declare Function L43_BNRPutVal Lib "L43W32.DLL" Alias "_L43_BNRPutVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigbit As UInt16, ByRef resolstr As String) As UInt32
    Public Declare Function L43_BrdNumRd Lib "L43W32.DLL" Alias "_L43_BrdNumRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_BrdNumWr Lib "L43W32.DLL" Alias "_L43_BrdNumWr@8" (ByVal brdnum As UInt16, ByVal handleval As UInt32)
    Public Declare Function L43_CardClose Lib "L43W32.DLL" Alias "_L43_CardClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CardOpen Lib "L43W32.DLL" Alias "_L43_CardOpen@4" (ByVal cardnum As Int32) As UInt32
    Public Declare Sub L43_CardReset Lib "L43W32.DLL" Alias "_L43_CardReset@4" (ByVal handleval As UInt32)
    Public Declare Function L43_CardResume Lib "L43W32.DLL" Alias "_L43_CardResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CardStart Lib "L43W32.DLL" Alias "_L43_CardStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CardStop Lib "L43W32.DLL" Alias "_L43_CardStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_CardTrigger Lib "L43W32.DLL" Alias "_L43_CardTrigger@4" (ByVal handleval As UInt32)
    Public Declare Function L43_ChClear Lib "L43W32.DLL" Alias "_L43_ChClear@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_ChConfig Lib "L43W32.DLL" Alias "_L43_ChConfig@12" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_ChPause Lib "L43W32.DLL" Alias "_L43_ChPause@8" (ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_ChPauseCheck Lib "L43W32.DLL" Alias "_L43_ChPauseCheck@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_ChResume Lib "L43W32.DLL" Alias "_L43_ChResume@8" (ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_ExtDinRd Lib "L43W32.DLL" Alias "_L43_ExtDinRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_ExtDinWr Lib "L43W32.DLL" Alias "_L43_ExtDinWr@8" (ByVal dinval As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_ExtDIORd Lib "L43W32.DLL" Alias "_L43_ExtDIORd@8" (ByVal dionum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_ExtDIOWr Lib "L43W32.DLL" Alias "_L43_ExtDIOWr@12" (ByVal dionum As Int32, ByVal dioval As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_ExtLEDRd Lib "L43W32.DLL" Alias "_L43_ExtLEDRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_ExtLEDWr Lib "L43W32.DLL" Alias "_L43_ExtLEDWr@8" (ByVal ledval As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_FilterClear Lib "L43W32.DLL" Alias "_L43_FilterClear@8" (ByVal basevaladdr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_FilterDefault Lib "L43W32.DLL" Alias "_L43_FilterDefault@12" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_FilterRd Lib "L43W32.DLL" Alias "_L43_FilterRd@16" (ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_FilterSet Lib "L43W32.DLL" Alias "_L43_FilterSet@20" (ByVal configval As UInt32, ByVal labelval As Int32, ByVal sdimask As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_FilterWr Lib "L43W32.DLL" Alias "_L43_FilterWr@20" (ByVal msgaddr As UInt32, ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_FldGetData Lib "L43W32.DLL" Alias "_L43_FldGetData@4" (ByVal msgval As UInt32) As UInt32
    Public Declare Function L43_FldGetLabel Lib "L43W32.DLL" Alias "_L43_FldGetLabel@4" (ByVal msgval As UInt32) As UInt16
    Public Declare Function L43_FldGetParity Lib "L43W32.DLL" Alias "_L43_FldGetParity@4" (ByVal msgval As UInt32) As UInt16
    Public Declare Function L43_FldGetSDI Lib "L43W32.DLL" Alias "_L43_FldGetSDI@4" (ByVal msgval As UInt32) As UInt16
    Public Declare Function L43_FldGetValue Lib "L43W32.DLL" Alias "_L43_FldGetValue@12" (ByVal msgval As UInt32, ByVal startbit As UInt16, ByVal endbit As UInt16) As UInt32
    Public Declare Function L43_FldPutData Lib "L43W32.DLL" Alias "_L43_FldPutData@8" (ByVal msgval As UInt32, ByVal data As UInt32) As UInt32
    Public Declare Function L43_FldPutLabel Lib "L43W32.DLL" Alias "_L43_FldPutLabel@8" (ByVal msgval As UInt32, ByVal label As UInt16) As UInt32
    Public Declare Function L43_FldPutSDI Lib "L43W32.DLL" Alias "_L43_FldPutSDI@8" (ByVal msgval As UInt32, ByVal sdi As UInt16) As UInt32
    Public Declare Function L43_FldPutValue Lib "L43W32.DLL" Alias "_L43_FldPutValue@16" (ByVal msgval As UInt32, ByVal dataval As UInt32, ByVal startbit As UInt16, ByVal endbit As UInt16) As UInt32
    Public Declare Sub L43_GetChanCount Lib "L43W32.DLL" Alias "_L43_GetChanCount@12" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_IntConfig Lib "L43W32.DLL" Alias "_L43_IntConfig@12" (ByVal configval As UInt16, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_IntInstall Lib "L43W32.DLL" Alias "_L43_IntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_IntRd Lib "L43W32.DLL" Alias "_L43_IntRd@12" (ByRef typevalval As UInt16, ByRef infoval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L43_IntReset Lib "L43W32.DLL" Alias "_L43_IntReset@4" (ByVal handleval As UInt32)
    Public Declare Function L43_IntStatus Lib "L43W32.DLL" Alias "_L43_IntStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_IntUninstall Lib "L43W32.DLL" Alias "_L43_IntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_IsChan Lib "L43W32.DLL" Alias "_L43_IsChan@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_IsRcvChan Lib "L43W32.DLL" Alias "_L43_IsRcvChan@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_IsXmtChan Lib "L43W32.DLL" Alias "_L43_IsXmtChan@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_ListAsyncCreate Lib "L43W32.DLL" Alias "_L43_ListAsyncCreate@16" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_ListDataRd Lib "L43W32.DLL" Alias "_L43_ListDataRd@8" (ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_ListDataWr Lib "L43W32.DLL" Alias "_L43_ListDataWr@12" (ByVal value As UInt32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_ListRcvCreate Lib "L43W32.DLL" Alias "_L43_ListRcvCreate@16" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_ListXmtCreate Lib "L43W32.DLL" Alias "_L43_ListXmtCreate@16" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_MsgBlockRd Lib "L43W32.DLL" Alias "_L43_MsgBlockRd@12" (ByRef msgfields As MSGFIELDS, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_MsgBlockWr Lib "L43W32.DLL" Alias "_L43_MsgBlockWr@12" (ByRef msgfields As MSGFIELDS, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_MsgCommRd Lib "L43W32.DLL" Alias "_L43_MsgCommRd@12" (ByRef msgfields As MSGFIELDS, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_MsgCommWr Lib "L43W32.DLL" Alias "_L43_MsgCommWr@12" (ByRef msgfields As MSGFIELDS, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_MsgCreate Lib "L43W32.DLL" Alias "_L43_MsgCreate@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_MsgDataRd Lib "L43W32.DLL" Alias "_L43_MsgDataRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L43_MsgDataWr Lib "L43W32.DLL" Alias "_L43_MsgDataWr@12" (ByVal value As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_MsgIsAccessed Lib "L43W32.DLL" Alias "_L43_MsgIsAccessed@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedBranch Lib "L43W32.DLL" Alias "_L43_SchedBranch@16" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
